--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <h1>Semester</h1>
             <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSMtMMQPJ_rhUddI-vnFMccGnCggux9KgbQ493Ew-gHcNjuvdr4W2DvZYz7aYwTrcTBpQgnYRDMeBSX/pubchart?oid=859605170&amp;format=interactive"></iframe>
         </div>
+        
+        <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR0Ew1PbgI3CM8eK6M-_pKWXtS4mAGnufPGxhW8zrd-Kdvhgx9FRSNPsMf-Wt7I3R7kZy7T4hULm4kD/pubchart?oid=1095444780&amp;format=interactive"></iframe>
 
     </div>
 </body>
